# scribe

./: Cargo.toml  README.md
item_specs/: Cargo.toml
scribe/: Cargo.toml
scribe/src/: lib.rs  main.rs
scribe/src/cmds/: build.rs
scribe/src/models/: cli_args.rs  mod.rs  scribe_errors.rs
