[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.26"
peace = { version = "0.0.7", features = ["error_reporting", "output_colorized", "output_progress"] }
serde = { version = "1.0.154", features = ["derive"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["rt"] }
toml = "0.7.2"
